--- a/css/style.css
+++ b/css/style.css
@@ -6,18 +6,18 @@ body{
     text-align: center;
     font-family: 'Nunito';
     font-weight: bolder;
-    
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
 
 h1,h2 {
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
   }
   
-.jogador-div {
-    display: flex;
-    flex-direction: column;
-    margin: 0 0.4em;
-    text-align: center;
+.jogador {
+    border: #ffffff solid 1px;
+
 }
   
 a {
@@ -34,11 +34,28 @@ a {
 #imagem {
     float: left;
     margin-right: 3em;
+    margin-left: 3em;
 }
   
 
 #feminino, #masculino{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    width: 1200px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    margin: 0 auto;
+    
+}
+
+@media (max-width : 1024px) {
+    #feminino,#masculino{
+        width: fit-content;
+        grid-template-columns : 1fr 1fr 1fr 1fr;
+    }
+}
+
+@media (max-width : 720px) {
+    #feminino,#masculino{
+        grid-template-columns : 1fr 1fr;
+        font-size: 10pt;  
+    }
 }
